# TheLab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  flake.nix
.github/TEMPLATES/: feature_template.md
.github/workflows/: buildClangLinux.yml  buildClangLinuxWithNix.yml  buildGCCLinux.yml  buildGCCLinuxWithNix.yml  buildLinux.yml  clangformat.yml
docs/: database_spec.md
docs/dev/: FEATURES.md  TODO.md
docs/internal/: doxygen.in
src/: CMakeLists.txt  main.cpp  mainwindow.h
src/analytics/: analytics.cpp  analytics.h
src/body/: body.cpp  body.h
src/cli/: cli.h  main.cpp
src/database/: database.cpp  database.h
src/excercise/: excercise.cpp  excercise.h
src/exercise/: exercise.cpp  exercise.h
src/history/: history.cpp  history.h
src/lab/: lab.cpp  lab.h
src/workout/: workout.cpp  workout.h
src/workoutplan/: workoutplan.h
test/: CMakeLists.txt  analytics_test.cpp  body_test.cpp  database_test.cpp  excercise_test.cpp  history_test.cpp  testHelper.cpp  testHelper.h  workout_test.cpp  workoutplan_test.cpp
test/unit_tests/: analytics_test.cpp  body_test.cpp  database_test.cpp  excercise_test.cpp  exercise_test.cpp  history_test.cpp  lab_test.cpp  workout_test.cpp
test/utils/: testHelper.cpp  testHelper.h
ui/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.ui
